ADD: rethinking 3d reconstruction

--- a/assets/gitbook/rouge/bw.css
+++ b/assets/gitbook/rouge/bw.css
@@ -1,22 +1,39 @@
-.highlight table td { padding: 5px; }
-.highlight table pre { margin: 0; }
-.highlight, .highlight .w {
+.highlight table td {
+  padding: 5px;
+}
+.highlight table pre {
+  margin: 0;
+}
+.highlight,
+.highlight .w {
   color: #000000;
   background-color: #ffffff;
 }
-.highlight .c, .highlight .ch, .highlight .cd, .highlight .cm, .highlight .cpf, .highlight .c1, .highlight .cs {
+.highlight .c,
+.highlight .ch,
+.highlight .cd,
+.highlight .cm,
+.highlight .cpf,
+.highlight .c1,
+.highlight .cs {
   font-style: italic;
 }
 .highlight .cp {
 }
-.highlight .k, .highlight .kc, .highlight .kd, .highlight .kn, .highlight .kr, .highlight .kv {
+.highlight .k,
+.highlight .kc,
+.highlight .kd,
+.highlight .kn,
+.highlight .kr,
+.highlight .kv {
   font-weight: bold;
 }
 .highlight .kp {
 }
 .highlight .kt {
 }
-.highlight .o, .highlight .ow {
+.highlight .o,
+.highlight .ow {
   font-weight: bold;
 }
 .highlight .nc {
@@ -34,7 +51,17 @@
 .highlight .nt {
   font-weight: bold;
 }
-.highlight .s, .highlight .sb, .highlight .sc, .highlight .dl, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .sr, .highlight .s1, .highlight .ss {
+.highlight .s,
+.highlight .sb,
+.highlight .sc,
+.highlight .dl,
+.highlight .sd,
+.highlight .s2,
+.highlight .sh,
+.highlight .sx,
+.highlight .sr,
+.highlight .s1,
+.highlight .ss {
   font-style: italic;
 }
 .highlight .sa {
@@ -62,5 +89,5 @@
   font-weight: bold;
 }
 .highlight .err {
-  color: #FF0000;
+  color: #ff0000;
 }
