--- a/assets/gitbook/rouge/molokai.css
+++ b/assets/gitbook/rouge/molokai.css
@@ -1,6 +1,13 @@
-.highlight table td { padding: 5px; }
-.highlight table pre { margin: 0; }
-.highlight .c, .highlight .ch, .highlight .cd, .highlight .cpf {
+.highlight table td {
+  padding: 5px;
+}
+.highlight table pre {
+  margin: 0;
+}
+.highlight .c,
+.highlight .ch,
+.highlight .cd,
+.highlight .cpf {
   color: #5e5d83;
   font-style: italic;
 }
@@ -56,7 +63,8 @@
 .highlight .gu {
   color: #465457;
 }
-.highlight .k, .highlight .kv {
+.highlight .k,
+.highlight .kv {
   color: #66d9ef;
   font-weight: bold;
 }
@@ -107,7 +115,9 @@
 .highlight .mo {
   color: #af87ff;
 }
-.highlight .m, .highlight .mb, .highlight .mx {
+.highlight .m,
+.highlight .mb,
+.highlight .mx {
   color: #af87ff;
 }
 .highlight .se {
@@ -143,7 +153,9 @@
 .highlight .ss {
   color: #d7d787;
 }
-.highlight .s, .highlight .sa, .highlight .dl {
+.highlight .s,
+.highlight .sa,
+.highlight .dl {
   color: #d7d787;
 }
 .highlight .na {
@@ -161,7 +173,8 @@
   color: #a6e22e;
   font-weight: bold;
 }
-.highlight .nf, .highlight .fm {
+.highlight .nf,
+.highlight .fm {
   color: #a6e22e;
   font-weight: bold;
 }
@@ -189,7 +202,8 @@
 .highlight .vi {
   color: #f8f8f2;
 }
-.highlight .nv, .highlight .vm {
+.highlight .nv,
+.highlight .vm {
   color: #f8f8f2;
 }
 .highlight .w {
