--- a/assets/gitbook/rouge/pastie.css
+++ b/assets/gitbook/rouge/pastie.css
@@ -1,6 +1,15 @@
-.highlight table td { padding: 5px; }
-.highlight table pre { margin: 0; }
-.highlight .c, .highlight .ch, .highlight .cd, .highlight .cm, .highlight .cpf, .highlight .c1 {
+.highlight table td {
+  padding: 5px;
+}
+.highlight table pre {
+  margin: 0;
+}
+.highlight .c,
+.highlight .ch,
+.highlight .cd,
+.highlight .cm,
+.highlight .cpf,
+.highlight .c1 {
   color: #888888;
 }
 .highlight .cp {
@@ -51,7 +60,12 @@
 .highlight .gt {
   color: #aa0000;
 }
-.highlight .k, .highlight .kc, .highlight .kd, .highlight .kn, .highlight .kr, .highlight .kv {
+.highlight .k,
+.highlight .kc,
+.highlight .kd,
+.highlight .kn,
+.highlight .kr,
+.highlight .kv {
   color: #008800;
   font-weight: bold;
 }
@@ -62,11 +76,25 @@
   color: #888888;
   font-weight: bold;
 }
-.highlight .m, .highlight .mb, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mx {
+.highlight .m,
+.highlight .mb,
+.highlight .mf,
+.highlight .mh,
+.highlight .mi,
+.highlight .il,
+.highlight .mo,
+.highlight .mx {
   color: #0000dd;
   font-weight: bold;
 }
-.highlight .s, .highlight .sb, .highlight .sc, .highlight .dl, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .s1 {
+.highlight .s,
+.highlight .sb,
+.highlight .sc,
+.highlight .dl,
+.highlight .sd,
+.highlight .s2,
+.highlight .sh,
+.highlight .s1 {
   color: #dd2200;
   background-color: #fff0f0;
 }
@@ -96,7 +124,8 @@
 .highlight .na {
   color: #336699;
 }
-.highlight .nb, .highlight .bp {
+.highlight .nb,
+.highlight .bp {
   color: #003388;
 }
 .highlight .nc {
@@ -114,7 +143,8 @@
   color: #bb0066;
   font-weight: bold;
 }
-.highlight .nf, .highlight .fm {
+.highlight .nf,
+.highlight .fm {
   color: #0066bb;
   font-weight: bold;
 }
@@ -133,7 +163,9 @@
   color: #bb0066;
   font-weight: bold;
 }
-.highlight .nv, .highlight .vc, .highlight .vm {
+.highlight .nv,
+.highlight .vc,
+.highlight .vm {
   color: #336699;
 }
 .highlight .vg {
