--- a/assets/gitbook/rouge/tulip.css
+++ b/assets/gitbook/rouge/tulip.css
@@ -1,11 +1,21 @@
-.highlight table td { padding: 5px; }
-.highlight table pre { margin: 0; }
+.highlight table td {
+  padding: 5px;
+}
+.highlight table pre {
+  margin: 0;
+}
 .highlight {
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #231529;
 }
-.highlight .c, .highlight .ch, .highlight .cd, .highlight .cm, .highlight .cpf, .highlight .c1, .highlight .cs {
-  color: #6D6E70;
+.highlight .c,
+.highlight .ch,
+.highlight .cd,
+.highlight .cm,
+.highlight .cpf,
+.highlight .c1,
+.highlight .cs {
+  color: #6d6e70;
   font-style: italic;
 }
 .highlight .cp {
@@ -13,28 +23,32 @@
   font-weight: bold;
 }
 .highlight .err {
-  color: #FFFFFF;
-  background-color: #CC0000;
+  color: #ffffff;
+  background-color: #cc0000;
 }
 .highlight .gr {
-  color: #FFFFFF;
-  background-color: #CC0000;
+  color: #ffffff;
+  background-color: #cc0000;
 }
-.highlight .k, .highlight .kd, .highlight .kv {
-  color: #FFF02A;
+.highlight .k,
+.highlight .kd,
+.highlight .kv {
+  color: #fff02a;
   font-weight: bold;
 }
-.highlight .o, .highlight .ow {
+.highlight .o,
+.highlight .ow {
   color: #41ff5b;
 }
-.highlight .p, .highlight .pi {
+.highlight .p,
+.highlight .pi {
   color: #41ff5b;
 }
 .highlight .gd {
-  color: #CC0000;
+  color: #cc0000;
 }
 .highlight .gi {
-  color: #3FB34F;
+  color: #3fb34f;
 }
 .highlight .ge {
   font-style: italic;
@@ -43,63 +57,63 @@
   font-weight: bold;
 }
 .highlight .gt {
-  color: #FFFFFF;
-  background-color: #766DAF;
+  color: #ffffff;
+  background-color: #766daf;
 }
 .highlight .gl {
-  color: #FFFFFF;
-  background-color: #766DAF;
+  color: #ffffff;
+  background-color: #766daf;
 }
 .highlight .kc {
   color: #9f93e6;
   font-weight: bold;
 }
 .highlight .kn {
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: bold;
 }
 .highlight .kp {
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: bold;
 }
 .highlight .kr {
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: bold;
 }
 .highlight .gh {
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: bold;
 }
 .highlight .gu {
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: bold;
 }
 .highlight .kt {
-  color: #FAAF4C;
+  color: #faaf4c;
   font-weight: bold;
 }
 .highlight .no {
-  color: #FAAF4C;
+  color: #faaf4c;
   font-weight: bold;
 }
 .highlight .nc {
-  color: #FAAF4C;
+  color: #faaf4c;
   font-weight: bold;
 }
 .highlight .nd {
-  color: #FAAF4C;
+  color: #faaf4c;
   font-weight: bold;
 }
 .highlight .nn {
-  color: #FAAF4C;
+  color: #faaf4c;
   font-weight: bold;
 }
 .highlight .bp {
-  color: #FAAF4C;
+  color: #faaf4c;
   font-weight: bold;
 }
 .highlight .ne {
-  color: #FAAF4C;
+  color: #faaf4c;
   font-weight: bold;
 }
 .highlight .nl {
@@ -110,7 +124,14 @@
   color: #9f93e6;
   font-weight: bold;
 }
-.highlight .m, .highlight .mb, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mx {
+.highlight .m,
+.highlight .mb,
+.highlight .mf,
+.highlight .mh,
+.highlight .mi,
+.highlight .il,
+.highlight .mo,
+.highlight .mx {
   color: #9f93e6;
   font-weight: bold;
 }
@@ -122,24 +143,32 @@
   color: #9f93e6;
   font-weight: bold;
 }
-.highlight .s, .highlight .sb, .highlight .dl, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .sr, .highlight .s1 {
+.highlight .s,
+.highlight .sb,
+.highlight .dl,
+.highlight .sd,
+.highlight .s2,
+.highlight .sh,
+.highlight .sx,
+.highlight .sr,
+.highlight .s1 {
   color: #fff0a6;
   font-weight: bold;
 }
 .highlight .sa {
-  color: #FFF02A;
+  color: #fff02a;
   font-weight: bold;
 }
 .highlight .se {
-  color: #FAAF4C;
+  color: #faaf4c;
   font-weight: bold;
 }
 .highlight .sc {
-  color: #FAAF4C;
+  color: #faaf4c;
   font-weight: bold;
 }
 .highlight .si {
-  color: #FAAF4C;
+  color: #faaf4c;
   font-weight: bold;
 }
 .highlight .nb {
@@ -150,9 +179,10 @@
   font-weight: bold;
 }
 .highlight .w {
-  color: #BBBBBB;
+  color: #bbbbbb;
 }
-.highlight .nf, .highlight .fm {
+.highlight .nf,
+.highlight .fm {
   color: #41ff5b;
 }
 .highlight .py {
@@ -161,7 +191,11 @@
 .highlight .na {
   color: #41ff5b;
 }
-.highlight .nv, .highlight .vc, .highlight .vg, .highlight .vi, .highlight .vm {
+.highlight .nv,
+.highlight .vc,
+.highlight .vg,
+.highlight .vi,
+.highlight .vm {
   color: #41ff5b;
   font-weight: bold;
 }
