--- a/_layouts/search-base.html
+++ b/_layouts/search-base.html
@@ -1,6 +1,6 @@
 <!-- Slightly Modified from _layouts/home.html -->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     {%- include head.html -%} {% assign reversed_posts = site.posts | reverse %}
