--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <meta charset="UTF-8" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 
+<meta name="google-site-verification" content="GCqjyFMO-_zrYeYYEnTAW3MKvy_2sGanpX8-NRZWnkI" />
+
 {%- if page.title -%}
 <title>{{ page.title | escape }} · {{ site.title | escape }}</title>
 {%- else -%}
